get rid of some instances of Collections.singleton